@@ -154,7 +154,11 @@ class Smarty_Internal_CacheResource_File extends Smarty_CacheResource {
 
             // remove from template cache
             $tpl->source; // have the template registered before unset()
-            $_templateId = $tpl->source->unique_resource . $tpl->cache_id . $tpl->compile_id;
+            if ($smarty->allow_ambiguous_resources) {
+                $_templateId = $tpl->source->unique_resource . $tpl->cache_id . $tpl->compile_id;
+            } else {
+                $_templateId = $smarty->joined_template_dir . '#' . $resource_name . $tpl->cache_id . $tpl->compile_id;
+            }
             if (isset($_templateId[150])) {
                 $_templateId = sha1($_templateId);
             }
